@@ -18,7 +18,7 @@
 #
 
 from xbmcswift2 import Plugin
-import resources.lib.scraper as scraper
+from resources.lib import scraper
 
 STRINGS = {
     'page': 30001,
@@ -208,4 +208,7 @@ def log(text):
     plugin.log.info(text)
 
 if __name__ == '__main__':
-    plugin.run()
+    try:
+        plugin.run()
+    except scraper.NetworkError:
+        plugin.notify(msg=_('network_error'))
